--- a/DemoApp/frontend/src/components/content-box/content-box.module.css
+++ b/DemoApp/frontend/src/components/content-box/content-box.module.css
@@ -19,24 +19,39 @@
     border-radius: 20px;
 
     background: silver;
-    padding: 5%;
+    padding: 4%;
 }
 
 .imageWrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 90%;
-    max-height: 70%;
-    margin-left: 50px;
-    margin-right: 50px;
+    max-width: 100%;
+    height: 350px;
+}
 
+.image {
+    max-width: 90%;
+    max-height: 100%;
     border: 3px solid black;
     border-radius: 5px;
 }
 
-.image {
-    max-width: 100%;
-    max-height: 100%;
+.manage {
+    height: 60px;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.header {
+    margin: 0 5px 3%;
+    line-height: 40px;
+    border-bottom: 2px solid grey;
+}
+
+.customSize {
+    width: 230px;
 }
 
