--- a/DemoApp/frontend/src/components/content-box/content-box.module.css
+++ b/DemoApp/frontend/src/components/content-box/content-box.module.css
@@ -19,7 +19,7 @@
     border-radius: 20px;
 
     background: silver;
-    padding: 4%;
+    padding: 30px;
 }
 
 .imageWrapper {
@@ -46,8 +46,10 @@
 }
 
 .header {
-    margin: 0 5px 3%;
-    line-height: 40px;
+    margin: 0 5px 5px;
+    line-height: 35px;
+    font-size: 25px;
+    font-weight: bold;
     border-bottom: 2px solid grey;
 }
 
